<resources>

    <!--App Name-->
    <string name="app_name">AppNote</string>

    <!--Note-->
    <string name="note_hint_title">Enter Title</string>
    <string name="note_hint_content">Enter Note</string>
    <string name="note_snackbar_undo_action">Undo</string>
    <string name="note_snackbar_deleted_msg">Note successfully deleted</string>
    <string name="note_warning_no_title">It\'s necessary to have a tittle if you want to save this note</string>

    <!--Content Descriptions-->
    <string name="content_desc_write_new_note">Create a new note</string>
    <string name="content_desc_save_note">Save this note</string>
    <string name="content_desc_delete_note">Delete this note</string>

    <!--Tools Resources-->
    <string name="place_holder_note_title">Vor Speech</string>
    <string name="place_holder_note_content">Look at them, they come to this place when they know they are not pure. Tenno use the keys, but they are mere trespassers. Only I, Vor, know the true power of the Void. I was cut in half, destroyed, but through its Janus Key, the Void called to me. It brought me here and here I was reborn. We cannot blame these creatures, they are being led by a false prophet, an impostor who knows not the secrets of the Void. Behold the Tenno, come to scavenge and desecrate this sacred realm. My brothers, did I not tell of this day? Did I not prophesize this moment? Now, I will stop them. Now I am changed, reborn through the energy of the Janus Key. Forever bound to the Void. Let it be known, if the Tenno want true salvation, they will lay down their arms, and wait for the baptism of my Janus key. It is time. I will teach these trespassers the redemptive power of my Janus key. They will learn its simple truth. The Tenno are lost, and they will resist. But I, Vor, will cleanse this place of their impurity. Look at them, they come to this place when they know they are not pure. Tenno use the keys, but they are mere trespassers. Only I, Vor, know the true power of the Void. I was cut in half, destroyed, but through its Janus Key, the Void called to me. It brought me here and here I was reborn. We cannot blame these creatures, they are being led by a false prophet, an impostor who knows not the secrets of the Void. Behold the Tenno, come to scavenge and desecrate this sacred realm. My brothers, did I not tell of this day? Did I not prophesize this moment? Now, I will stop them. Now I am changed, reborn through the energy of the Janus Key. Forever bound to the Void. Let it be known, if the Tenno want true salvation, they will lay down their arms, and wait for the baptism of my Janus key. It is time. I will teach these trespassers the redemptive power of my Janus key. They will learn its simple truth. The Tenno are lost, and they will resist. But I, Vor, will cleanse this place of their impurity.</string>

</resources>